test/conformance/chainsaw/verifyImages/clusterpolicy/standard/multiple-image-verification-attestations-fail/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notary-verify-attestation
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: keys
  namespace: notary-verify-attestation
data:
  certificate: |-
    -----BEGIN CERTIFICATE-----
    MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
    uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
    -----END CERTIFICATE-----
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image-attestation
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: verify-attestation-notary
      match:
        any:
        - resources:
            kinds:
              - Pod
      context:
      - name: keys
        configMap:
          name: keys
          namespace: notary-verify-attestation
      verifyImages:
      - type: Notary
        imageReferences:
          - "ghcr.io/kyverno/test-verify-image*"
        attestations:
          - type: sbom/cyclone-dx
            name: one
            attestors:
            - entries:
              - certificates: 
                  cert: "{{ keys.data.certificate }}"
          - type: vulnerability-scan
            name: two
            attestors:
            - entries:
              - certificates: 
                  cert: "{{ keys.data.certificate }}"
        validate:
          deny:
            conditions:
              any:
              - key: '{{ one[0].predicate.bomFormat}}'
                operator: NotEquals
                value: CycloneDX
                message: test1
              - key: '{{ two[0].schemaVersion }}'
                operator: GreaterThan
                value: 0
                message: test2
          message: Sample Validation
